click listener in show all of the home done

--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -86,6 +86,7 @@
         "title": "Videos",
         "max": 5,
         "showall": true,
+        "showall_link":"sp://videos",
         "show_header": true,
         "link": "sp://videodetail",
         "orientation": "horizontal",
@@ -96,6 +97,7 @@
         "title": "Gallery",
         "max": 5,
         "showall": true,
+        "showall_link":"sp://gallery",
         "show_header": true,
         "link": "sp://gallery",
         "orientation": "horizontal",
@@ -106,6 +108,7 @@
         "title": "News",
         "max": 5,
         "showall": true,
+        "showall_link":"sp://news",
         "show_header": true,
         "link": "sp://news",
         "orientation": "vertical",
