minor issues with toolbar background color fixed

--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -2,8 +2,8 @@
   "pkgname": "com.sample.app",
   "version": 1,
   "primarydark": "#303F9F",
-  "primarycolor": "#3F51B5",
-  "secondarycolor": "#FF4081",
+  "primarycolor": "#F44336",
+  "secondarycolor": "#536DFE",
   "admob_id": "ca-app-pub-3940256099942544~3347511713",
   "banner_id": "ca-app-pub-3940256099942544/6300978111",
   "fullscreen_id": "",
