fullscreen add done, bannerlayout issues fixed

--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -6,7 +6,7 @@
   "secondarycolor": "#536DFE",
   "admob_id": "ca-app-pub-3940256099942544~3347511713",
   "banner_id": "ca-app-pub-3940256099942544/6300978111",
-  "fullscreen_id": "",
+  "fullscreen_id": "ca-app-pub-3940256099942544/1033173712",
   "baseurl": "https://vs.hamroapi.com/v6/",
   "youtubeAPIKey": "AIzaSyClu7gEsgyK8_8BFzt6n8VXRFGq-nnb-bc",
   "home": {
