--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
@@ -41,18 +42,18 @@
         </activity>
 
         <!--<activity-->
-            <!--android:name=".MainActivity"-->
-            <!--android:configChanges="keyboardHidden|screenSize|orientation|screenLayout">-->
-            <!--<intent-filter android:label="@string/app_name">-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
+        <!--android:name=".MainActivity"-->
+        <!--android:configChanges="keyboardHidden|screenSize|orientation|screenLayout">-->
+        <!--<intent-filter android:label="@string/app_name">-->
+        <!--<action android:name="android.intent.action.VIEW" />-->
 
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+        <!--<category android:name="android.intent.category.DEFAULT" />-->
+        <!--<category android:name="android.intent.category.BROWSABLE" />-->
 
-                <!--<data-->
-                    <!--android:host="main"-->
-                    <!--android:scheme="sp" />-->
-            <!--</intent-filter>-->
+        <!--<data-->
+        <!--android:host="main"-->
+        <!--android:scheme="sp" />-->
+        <!--</intent-filter>-->
 
 
         <!--</activity>-->
@@ -196,7 +197,20 @@
 
         <activity
             android:name="com.yuvi.mantraui.gallery.GalleryDetailActivity"
-            android:configChanges="keyboardHidden|screenSize|orientation|screenLayout" />
+            android:configChanges="keyboardHidden|screenSize|orientation|screenLayout"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+            <intent-filter android:label="GalleryDetail">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="gallerydetail"
+                    android:scheme="sp" />
+            </intent-filter>
+        </activity>
 
 
         <service android:name="com.yuvi.mantraui.audio.MediaPlayerService" />
