--- a/app/src/main/assets/AppConfig.json
+++ b/app/src/main/assets/AppConfig.json
@@ -27,20 +27,20 @@
         "showalways": false,
         /*forcefully shows the icon in actionbar*/
         "icon": "",
-        "link": "sp://deeplink?action=\"rateus\""
+        "link": "sp://deeplink?action=rateus"
       },
       {
         "title": "share",
         "showalways": false,
         /* if false shows in popupmenu*/
-        "icon": "sp://deeplink?action=\"share\"",
+        "icon": "sp://deeplink?action=share",
         "link": ""
       },
       {
         "title": "disclaimer",
         "showalways": false,
         "icon": "",
-        "link": "sp://deeplink?action=\"disclaimer\""
+        "link": "sp://deeplink?action=disclaimer"
       }
     ],
     "alert": true,
