--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.enableAapt2=true
 bintrayUser=engineeringstore
 bintrayApiKey=013917a0dc09c3ec1a6c3ae47b848fc280df8561
