--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,13 @@ buildscript {
         maven {
             url 'https://maven.fabric.io/public'
         }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.1'
         classpath 'com.google.gms:google-services:3.2.0'
         classpath 'io.fabric.tools:gradle:1.25.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         
 
@@ -26,9 +28,12 @@ allprojects {
         google()
         jcenter()
         maven {
+            url  "http://jcenter.bintray.com"
+        }
+        maven {
             url 'https://maven.google.com/'
         }
-    }
+          }
 }
 
 task clean(type: Delete) {
