--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mantraideas.samplproject">
+    package="com.nep.hamroui">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--<permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />-->
+    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
 
     <application
-        android:name=".MainApplication"
+        android:name="com.nep.hamroui.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -23,7 +22,7 @@
 
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.nep.hamroui.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +36,7 @@
 
                 <data
                     android:host="main"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
 
         </activity>
@@ -52,7 +51,7 @@
 
                 <data
                     android:host="news"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
 
 
@@ -67,8 +66,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="videos"
-                    android:scheme="sp" />
+                    android:host="videolist"
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
@@ -84,7 +83,7 @@
 
                 <data
                     android:host="player"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
         <activity
@@ -99,7 +98,7 @@
 
                 <data
                     android:host="newsdetail"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
         <activity
@@ -113,8 +112,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="videodetail"
-                    android:scheme="sp" />
+                    android:host="video"
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
@@ -129,7 +128,7 @@
 
                 <data
                     android:host="gallery"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
         <activity
@@ -143,7 +142,7 @@
 
                 <data
                     android:host="audiolist"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
@@ -158,7 +157,7 @@
 
                 <data
                     android:host="simplelist"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
@@ -173,8 +172,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="webview"
-                    android:scheme="sp" />
+                    android:host="web"
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
@@ -191,12 +190,60 @@
 
                 <data
                     android:host="gallerydetail"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.yuvi.hamroui.cast.CastActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation|screenLayout">
+
+            <intent-filter android:label="cast">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="cast"
+                    android:scheme="oldnepalisongs" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.yuvi.hamroui.cast.CastDetailActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation|screenLayout">
+
+            <intent-filter android:label="Cast Detail">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="castdetail"
+                    android:scheme="oldnepalisongs" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.yuvi.hamroui.cagtegory.CategoryListActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation|screenLayout">
+
+            <intent-filter android:label="Cast Detail">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="category"
+                    android:scheme="oldnepalisongs" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.nep.hamroui.SettingsActivity"
             android:configChanges="keyboardHidden|screenSize|orientation|screenLayout">
 
             <intent-filter android:label="Setting">
@@ -207,18 +254,18 @@
 
                 <data
                     android:host="setting"
-                    android:scheme="sp" />
+                    android:scheme="oldnepalisongs" />
             </intent-filter>
         </activity>
 
         <service android:name="com.yuvi.hamroui.audio.MediaPlayerService" />
 
-        <service android:name=".firebase.MyFirebaseMessagingService">
+        <service android:name="com.nep.hamroui.firebase.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".firebase.MyFirebaseInstanceIDService">
+        <service android:name="com.nep.hamroui.firebase.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
